[workspace]
resolver = "3"

members = [
    "crates/rollup-boost",
    "crates/websocket-proxy",
    "crates/flashblocks-rpc",
]

[workspace.dependencies]
rollup-boost = { path = "crates/rollup-boost" }

tracing = "0.1.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.31"
thiserror = "2.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
metrics = "0.24.0"
metrics-derive = "0.1"
tokio = { version = "1", features = ["full"] }
eyre = "0.6.12"
url = "2.2.0"
sha2 = { version = "0.10", default-features = false }
backoff = "0.4.0"

# Reth deps
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

# Alloy libraries
alloy-rpc-types-engine = "1.0.41"
alloy-rpc-types-eth = "1.0.41"
alloy-primitives = { version = "1.4.1", features = ["rand"] }
alloy-serde = "1.0.41"
alloy-eips = "1.0.41"
alloy-json-rpc = "1.0.41"
alloy-consensus = "1.0.41"
alloy-rpc-types = "1.0.41"
alloy-genesis = "1.0.41"
alloy-rpc-client = "1.0.41"
alloy-provider = "1.0.41"
op-alloy-rpc-types = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
op-alloy-rpc-types-engine = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
op-alloy-rpc-jsonrpsee = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
op-alloy-network = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
op-alloy-consensus = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }

[patch."https://github.com/paradigmxyz/reth"]
reth = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-basic-payload-builder = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-chain-state = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-chainspec = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-cli = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-cli-commands = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-cli-util = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-db = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-db-common = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-errors = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-evm = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-evm-ethereum = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-execution-errors = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-execution-types = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-exex = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-ipc = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-metrics = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-network-peers = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-node-api = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-node-builder = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-node-core = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-node-ethereum = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-chainspec = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-cli = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-consensus = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-evm = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-forks = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-node = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-payload-builder = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-rpc = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-optimism-txpool = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-payload-builder = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-payload-builder-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-payload-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-payload-util = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-primitives-traits = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-provider = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-revm = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-rpc-api = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-rpc-engine-api = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-rpc-eth-types = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-rpc-layer = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-rpc = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-rpc-builder = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-rpc-convert = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-rpc-eth-api = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-rpc-server-types = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-codecs = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-codecs-derive = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-config = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-consensus = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-consensus-common = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-e2e-test-utils = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-engine-local = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-engine-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-eth-wire-types = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-ethereum-engine-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-ethereum-forks = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-ethereum-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-net-banlist = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-network-api = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-network-p2p = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-network-types = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-prune-types = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-stages-types = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-static-file-types = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-storage-errors = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-tokio-util = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-tracing = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-trie-common = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-zstd-compressors = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-storage-api = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-tasks = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-testing-utils = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-tracing-otlp = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-transaction-pool = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-trie = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-trie-db = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
reth-trie-parallel = { git = "https://github.com/mantle-xyz/reth", branch = "mantle-arsia" }
