[workspace]
resolver = "3"

members = [
    "crates/rollup-boost",
    "crates/websocket-proxy",
    "crates/flashblocks-rpc",
]

[workspace.dependencies]
rollup-boost = { path = "crates/rollup-boost" }

tracing = "0.1.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.31"
thiserror = "2.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
metrics = "0.24.0"
metrics-derive = "0.1"
tokio = { version = "1", features = ["full"] }
eyre = "0.6.12"
url = "2.2.0"
sha2 = { version = "0.10", default-features = false }
backoff = "0.4.0"

# Reth deps
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

# Alloy libraries
alloy-rpc-types-engine = "1.0.41"
alloy-rpc-types-eth = "1.0.41"
alloy-primitives = { version = "1.4.1", features = ["rand"] }
alloy-serde = "1.0.41"
alloy-eips = "1.0.41"
alloy-json-rpc = "1.0.41"
alloy-consensus = "1.0.41"
alloy-rpc-types = "1.0.41"
alloy-genesis = "1.0.41"
alloy-rpc-client = "1.0.41"
alloy-provider = "1.0.41"
op-alloy-rpc-types = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
op-alloy-rpc-types-engine = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
op-alloy-rpc-jsonrpsee = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
op-alloy-network = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
op-alloy-consensus = { git = "https://github.com/mantle-xyz/op-alloy", tag = "v2.1.0", default-features = false }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }

[patch."https://github.com/paradigmxyz/reth"]
reth = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-basic-payload-builder = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-chain-state = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-chainspec = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-cli = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-cli-commands = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-cli-util = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-db = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-db-common = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-errors = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-evm = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-evm-ethereum = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-execution-errors = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-execution-types = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-exex = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-ipc = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-metrics = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-network-peers = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-node-api = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-node-builder = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-node-core = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-node-ethereum = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-chainspec = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-cli = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-consensus = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-evm = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-forks = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-node = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-payload-builder = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-rpc = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-optimism-txpool = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-payload-builder = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-payload-builder-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-payload-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-payload-util = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-primitives-traits = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-provider = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-revm = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-rpc-api = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-rpc-engine-api = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-rpc-eth-types = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-rpc-layer = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-rpc = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-rpc-builder = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-rpc-convert = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-rpc-eth-api = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-rpc-server-types = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-codecs = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-codecs-derive = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-config = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-consensus = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-consensus-common = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-e2e-test-utils = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-engine-local = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-engine-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-eth-wire-types = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-ethereum-engine-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-ethereum-forks = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-ethereum-primitives = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-net-banlist = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-network-api = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-network-p2p = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-network-types = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-prune-types = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-stages-types = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-static-file-types = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-storage-errors = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-tokio-util = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-tracing = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-trie-common = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-zstd-compressors = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-storage-api = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-tasks = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-testing-utils = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-tracing-otlp = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-transaction-pool = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-trie = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-trie-db = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
reth-trie-parallel = { git = "https://github.com/mantle-xyz/reth", branch = "flashblocks/poc" }
